...
                    if (_resetFormKey.currentState?.validate() ?? false) {
                      customSnackbarMessage('Reset email sent', context, Colors.green);
                    }
                  },
                )
              : ElevatedButton(
                  key: const Key('login'),
                  style: ElevatedButton.styleFrom(),
                  child: const Text("Login"),
                  onPressed: () async {
                    if (_formKey.currentState?.validate() ?? false) {
                      BlocProvider.of<AuthCubitCubit>(context).authLoginEvent(
                        _emailController.text, _passwordController.text);
...
