...
                ),
              ),
              // Add more text fields for other user information here.

              const SizedBox(height: 16),
              ElevatedButton(
                key: const Key('submit'),
                onPressed: () async {
                  if (_formKey.currentState!.validate()) {
                    // Save the user information to your database or use it as needed.
                    var response = await BlocProvider.of<ProfileCubit>(context)
                        .editProfile(username.text, bio.text, tag.text);
                    if (response) {
...
